--- a/BabyLog_Swift/Base.lproj/Main.storyboard
+++ b/BabyLog_Swift/Base.lproj/Main.storyboard
@@ -369,7 +369,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTj-8O-8Ym">
-                                                    <rect key="frame" x="16" y="98" width="69" height="30"/>
+                                                    <rect key="frame" x="16" y="99" width="69" height="30"/>
                                                     <state key="normal" title="到校时间">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
@@ -400,7 +400,9 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <connections>
+                                            <outlet property="arriveTimeButton" destination="BTj-8O-8Ym" id="87t-UT-aOZ"/>
                                             <outlet property="babyImageButton" destination="Zfj-8M-bQY" id="7RU-eF-p4e"/>
+                                            <outlet property="leaveTimeButton" destination="wWG-lb-qXd" id="ff2-SA-gVg"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
