--- a/BabyLog_Swift/Base.lproj/Main.storyboard
+++ b/BabyLog_Swift/Base.lproj/Main.storyboard
@@ -355,7 +355,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="546"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CQR-fx-ud2">
-                                    <size key="itemSize" width="100" height="153"/>
+                                    <size key="itemSize" width="105" height="161"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -365,20 +365,12 @@
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="153"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="105" height="161"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTj-8O-8Ym">
-                                                    <rect key="frame" x="16" y="99" width="69" height="30"/>
-                                                    <state key="normal" title="到校时间">
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="arriveTimeButtonTapped:" destination="3Ad-6L-GT9" eventType="touchUpInside" id="gfb-Mh-hHW"/>
-                                                    </connections>
-                                                </button>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wWG-lb-qXd">
-                                                    <rect key="frame" x="16" y="124" width="69" height="30"/>
+                                                    <rect key="frame" x="16" y="130" width="69" height="25"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <state key="normal" title="离校时间">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
@@ -394,6 +386,16 @@
                                                     <connections>
                                                         <action selector="babyImageButtonTapped:" destination="3Ad-6L-GT9" eventType="touchUpInside" id="YLx-Y7-jYd"/>
                                                         <segue destination="qsc-Hd-ZPq" kind="show" identifier="showDailyLogForOneBaby" id="toC-AT-nuq"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTj-8O-8Ym">
+                                                    <rect key="frame" x="18" y="98" width="69" height="25"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <state key="normal" title="到校时间">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="arriveTimeButtonTapped:" destination="3Ad-6L-GT9" eventType="touchUpInside" id="gfb-Mh-hHW"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
